# voronoi-cube

./: .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  application.cpp  clustering_iterations_render.cpp  commandqueue.cpp  config.h  cqrender.cpp  cube_lighting_render.cpp  helper.h  main.cpp  media_type_debug.h  pipelinestate.cpp  resolver.cpp  resource.cpp  rootsignature.cpp  source_reader_callback.cpp  subspace_render.cpp
source/inc/: IRender.h  application.h  clustering_iterations_render.h  commandqueue.h  cqrender.h  cube_lighting_render.h  pipelinestate.h  resolver.h  resource.h  rootsignature.h  source_reader_callback.h  subspace_render.h
source/shaders/: cqrender_centroid_vertex.hlsl  cqrender_compute.hlsl  cqrender_kc1_compute.hlsl  cqrender_kc2_compute.hlsl  cqrender_kc3_compute.hlsl  cqrender_point_pixel.hlsl  cqrender_point_vertex.hlsl  cqrender_vertex.hlsl  cs_clustering_iterations_downsampling.hlsl  cube_lighting_render_pixel.hlsl  cube_lighting_render_vertex.hlsl  ps_clustering_iterations_no_lighting.hlsl  subspace_render_color_normal_pixel.hlsl  subspace_render_color_normal_vertex.hlsl  subspace_render_constant_red_pixel.hlsl  subspace_render_linelist_pixel.hlsl  subspace_render_linelist_vertex.hlsl  subspace_render_no_color_vertex.hlsl  subspace_render_trianglelist_pixel.hlsl  subspace_render_trianglelist_vertex.hlsl  vs_clustering_iterations_pointlist_no_lighting.hlsl  vs_clustering_iterations_trianglelist_phong_lighting.hlsl
